# py-eb-model

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
.claude/commands/: README.md  gh-workflow.md  quality.md  req.md
.claude/skills/: code-2-req.md
.github/workflows/: ci.yml  python-package.yml
docs/: cli.md
docs/plans/: todo.md
docs/requirements/: bswm-module.md  ecuc-module.md  nvm-module.md  os-module.md  overview.md  requirements.md  rte-module.md  swr_bswm-module.md  swr_canif-module.md  swr_cannm-module.md  swr_cansm-module.md  swr_cantp-module.md  swr_cli-layer.md  swr_com.md  swr_comm.md  swr_crc.md  swr_cryif.md  swr_crypto.md  swr_csm.md  swr_dcm.md  swr_dem.md  swr_det-module.md  swr_dlt.md  swr_doip-module.md  swr_ea.md  swr_ecuc-module.md  swr_ecum-module.md  swr_ethif-module.md  swr_ethsm-module.md  swr_fee.md  swr_fim.md  swr_frartp-module.md  swr_frif-module.md  swr_frnm-module.md  swr_frsm-module.md  swr_frtp-module.md  swr_ipdum.md  swr_j1939dcm.md  swr_j1939nm.md  swr_j1939rm.md  (+24 more)
docs/superpowers/completion/: 2026-03-29-agent1-tm-det-completion.md  2026-03-29-agent3-os-completion.md  2026-03-29-agent4-ecum-rte-completion.md  2026-03-29-xdm-model-completeness-final-summary.md
docs/superpowers/plans/: 2026-03-28-tier-4-communication-modules.md  2026-03-28-tier-5-memory-modules.md  2026-03-29-agent1-tm-det-implementation.md  2026-03-29-agent2-ecuc-nvm-implementation.md  2026-03-29-agent3-os-implementation.md  2026-03-29-agent4-ecum-rte-implementation.md  2026-03-29-tier6-implementation.md
docs/superpowers/specs/: 2026-03-23-multi-module-xdm-parser-design.md  2026-03-29-tier6-implementation-design.md  2026-03-29-xdm-model-completeness-design.md
docs/test_cases/: dem.md  tc_j1939dcm.md  tc_j1939rm.md  tc_j1939tp.md
docs/test_cases/crypto_stack/: tc_secoc.md
docs/test_cases/j1939_stack/: tc_j1939nm.md
docs/tests/: README.md  registry.md  tc_cryif.md  tc_crypto.md  tc_dcm.md  tc_dlt.md  tc_fim.md  template.md
docs/tests/crypto_stack/: tc_csm.md
docs/tests/integration/: README.md  tc_int_bswm.md  tc_int_can.md  tc_int_cli.md  tc_int_dem.md  tc_int_ecuc.md  tc_int_ethernet.md  tc_int_flexray.md  tc_int_j1939.md  tc_int_lin.md  tc_int_nvm.md  tc_int_os.md  tc_int_parser.md  tc_int_reporter.md  tc_int_rte.md  tc_int_secoc.md  tc_int_system.md
docs/tests/unit/: README.md  tc_unit_bswm.md  tc_unit_can.md  tc_unit_cli.md  tc_unit_dem.md  tc_unit_ecuc.md  tc_unit_ethernet.md  tc_unit_flexray.md  tc_unit_j1939.md  tc_unit_lin.md  tc_unit_nvm.md  tc_unit_os.md  tc_unit_parser.md  tc_unit_reporter.md  tc_unit_rte.md  tc_unit_secoc.md  tc_unit_system.md
src/eb_model/: __init__.py
src/eb_model/cli/: bswm_xdm_2_xls_cli.py  canif_xdm_2_xls_cli.py  cannm_xdm_2_xls_cli.py  cansm_xdm_2_xls_cli.py  cantp_xdm_2_xls_cli.py  cli_utils.py  com_xdm_2_xls_cli.py  comm_xdm_2_xls_cli.py  crc_xdm_2_xls_cli.py  cryif_xdm_2_xls_cli.py  crypto_xdm_2_xls_cli.py  csm_xdm_2_xls_cli.py  dcm_xdm_2_xls_cli.py  dem_xdm_2_xls_cli.py  det_xdm_2_xls_cli.py  dlt_xdm_2_xls_cli.py  doip_xdm_2_xls_cli.py  ea_xdm_2_xls_cli.py  eb_convert.py  ecuc_xdm_2_xls_cli.py  ecum_xdm_2_xls_cli.py  ethif_xdm_2_xls_cli.py  ethsm_xdm_2_xls_cli.py  fee_xdm_2_xls_cli.py  fim_xdm_2_xls_cli.py  frartp_xdm_2_xls_cli.py  frif_xdm_2_xls_cli.py  frnm_xdm_2_xls_cli.py  frsm_xdm_2_xls_cli.py  frtp_xdm_2_xls_cli.py  ipdum_xdm_2_xls_cli.py  j1939dcm_xdm_2_xls_cli.py  j1939nm_xdm_2_xls_cli.py  j1939rm_xdm_2_xls_cli.py  j1939tp_xdm_2_xls_cli.py  ldcom_xdm_2_xls_cli.py  linif_xdm_2_xls_cli.py  linsm_xdm_2_xls_cli.py  lintp_xdm_2_xls_cli.py  memacc_xdm_2_xls_cli.py  (+15 more)
src/eb_model/core/: __init__.py  cli_options_registry.py  parser_writer_registry.py
src/eb_model/models/: __init__.all.txt  __init__.py  abstract.py  bswm_xdm.py  canif_xdm.py  cannm_xdm.py  cansm_xdm.py  cantp_xdm.py  com_xdm.py  comm_xdm.py  crc_xdm.py  cryif_xdm.py  crypto_xdm.py  csm_xdm.py  dcm_xdm.py  dem_xdm.py  det_xdm.py  dlt_xdm.py  doip_xdm.py  ea_xdm.py  eb_doc.py  eclipse_project.py  ecuc_xdm.py  ecum_xdm.py  ethif_xdm.py  ethsm_xdm.py  fee_xdm.py  fim_xdm.py  frartp_xdm.py  frif_xdm.py  frnm_xdm.py  frsm_xdm.py  frtp_xdm.py  importer_xdm.py  ipdum_xdm.py  j1939dcm_xdm.py  j1939nm_xdm.py  j1939rm_xdm.py  j1939tp_xdm.py  ldcom_xdm.py  (+18 more)
src/eb_model/parser/: __init__.all.txt  __init__.py  bswm_xdm_parser.py  canif_xdm_parser.py  cannm_xdm_parser.py  cansm_xdm_parser.py  cantp_xdm_parser.py  com_xdm_parser.py  comm_xdm_parser.py  crc_xdm_parser.py  cryif_xdm_parser.py  crypto_xdm_parser.py  csm_xdm_parser.py  dcm_xdm_parser.py  dem_xdm_parser.py  det_xdm_parser.py  dlt_xdm_parser.py  doip_xdm_parser.py  ea_xdm_parser.py  eb_parser.py  eb_parser_factory.py  ecuc_xdm_parser.py  ecum_xdm_parser.py  ethif_xdm_parser.py  ethsm_xdm_parser.py  fee_xdm_parser.py  fim_xdm_parser.py  frartp_xdm_parser.py  frif_xdm_parser.py  frnm_xdm_parser.py  frsm_xdm_parser.py  frtp_xdm_parser.py  ipdum_xdm_parser.py  j1939dcm_xdm_parser.py  j1939nm_xdm_parser.py  j1939rm_xdm_parser.py  j1939tp_xdm_parser.py  ldcom_xdm_parser.py  linif_xdm_parser.py  linsm_xdm_parser.py  (+17 more)
src/eb_model/reporter/: __init__.py  markdown.py
src/eb_model/tests/: conftest.py
src/eb_model/writer/: __init__.py  project_writer.py  text_writer.py
src/py_eb_model/cli/: os_xdm_2_xls_cli.py
src/py_eb_model/parser/: os_xdm_parser.py
src/py_eb_model/reporter/: markdown.py
tests/cli/: __init__.py  test_cli_utils.py  test_eb_convert.py
tests/core/: test_cli_options_registry.py  test_init.py  test_parser_writer_registry.py
tests/integration/: test_cli_installation.py  test_eb_convert_e2e.py  test_xdm_file_parsing.py
tests/models/: __init__.py  test_eb_model.py  test_ecuc_container.py
tests/models/com_stack/: test_ipdum_xdm.py  test_ldcom_xdm.py  test_pdur_xdm.py
tests/models/core/: test_abstract.py  test_det_xdm.py  test_eb_doc.py  test_ecuc_xdm.py  test_importer_xdm.py  test_os_xdm.py  test_tm_xdm.py
tests/models/crypto_stack/: test_crypto_xdm.py  test_csm_xdm.py  test_secoc_xdm.py
tests/models/diag_stack/: test_dcm_xdm.py  (+3 more)
tests/parser/: __init__.py
(+523 files in other folders)
