[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_eb_model"
version = "1.3.0"
license = {text = "MIT"}
description = "The parser for EB XDM file"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["EB", "Tresos", "XDM"]
authors = [
    {name = "melodypapa", email = "melodypapa@outlook.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "openpyxl",
]

[project.optional-dependencies]
dev = ["pytest-cov", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/melodypapa/py-eb-model"
Repository = "https://github.com/melodypapa/py-eb-model"
Issues = "https://github.com/melodypapa/py-eb-model/issues"

[project.scripts]
bswm-xdm-xlsx = "eb_model.cli.bswm_xdm_2_xls_cli:main"
os-xdm-xlsx = "eb_model.cli.os_xdm_2_xls_cli:main"
rte-xdm-xlsx = "eb_model.cli.rte_xdm_2_xls_cli:main"
nvm-xdm-xlsx = "eb_model.cli.nvm_xdm_2_xls_cli:main"
ecuc-xdm-xlsx = "eb_model.cli.ecuc_xdm_2_xls_cli:main"
tm-xdm-xlsx = "eb_model.cli.tm_xdm_2_xls_cli:main"
pbcfgm-xdm-xlsx = "eb_model.cli.pbcfgm_xdm_2_xls_cli:main"
ecum-xdm-xlsx = "eb_model.cli.ecum_xdm_2_xls_cli:main"
det-xdm-xlsx = "eb_model.cli.det_xdm_2_xls_cli:main"
canif-xdm-xlsx = "eb_model.cli.canif_xdm_2_xls_cli:main"
cannm-xdm-xlsx = "eb_model.cli.cannm_xdm_2_xls_cli:main"
cansm-xdm-xlsx = "eb_model.cli.cansm_xdm_2_xls_cli:main"
cantp-xdm-xlsx = "eb_model.cli.cantp_xdm_2_xls_cli:main"
linif-xdm-xlsx = "eb_model.cli.linif_xdm_2_xls_cli:main"
linsm-xdm-xlsx = "eb_model.cli.linsm_xdm_2_xls_cli:main"
lintp-xdm-xlsx = "eb_model.cli.lintp_xdm_2_xls_cli:main"
ethif-xdm-xlsx = "eb_model.cli.ethif_xdm_2_xls_cli:main"
ethsm-xdm-xlsx = "eb_model.cli.ethsm_xdm_2_xls_cli:main"
tcpip-xdm-xlsx = "eb_model.cli.tcpip_xdm_2_xls_cli:main"
soad-xdm-xlsx = "eb_model.cli.soad_xdm_2_xls_cli:main"
udpnm-xdm-xlsx = "eb_model.cli.udpnm_xdm_2_xls_cli:main"
doip-xdm-xlsx = "eb_model.cli.doip_xdm_2_xls_cli:main"
someiptp-xdm-xlsx = "eb_model.cli.someiptp_xdm_2_xls_cli:main"
frif-xdm-xlsx = "eb_model.cli.frif_xdm_2_xls_cli:main"
frtp-xdm-xlsx = "eb_model.cli.frtp_xdm_2_xls_cli:main"
frnm-xdm-xlsx = "eb_model.cli.frnm_xdm_2_xls_cli:main"
frsm-xdm-xlsx = "eb_model.cli.frsm_xdm_2_xls_cli:main"
frartp-xdm-xlsx = "eb_model.cli.frartp_xdm_2_xls_cli:main"
com-xdm-xlsx = "eb_model.cli.com_xdm_2_xls_cli:main"
ldcom-xdm-xlsx = "eb_model.cli.ldcom_xdm_2_xls_cli:main"
pdur-xdm-xlsx = "eb_model.cli.pdur_xdm_2_xls_cli:main"
ipdum-xdm-xlsx = "eb_model.cli.ipdum_xdm_2_xls_cli:main"
comm-xdm-xlsx = "eb_model.cli.comm_xdm_2_xls_cli:main"
nm-xdm-xlsx = "eb_model.cli.nm_xdm_2_xls_cli:main"
crc-xdm-xlsx = "eb_model.cli.crc_xdm_2_xls_cli:main"
memif-xdm-xlsx = "eb_model.cli.memif_xdm_2_xls_cli:main"
fee-xdm-xlsx = "eb_model.cli.fee_xdm_2_xls_cli:main"
ea-xdm-xlsx = "eb_model.cli.ea_xdm_2_xls_cli:main"
memmap-xdm-xlsx = "eb_model.cli.memmap_xdm_2_xls_cli:main"
memacc-xdm-xlsx = "eb_model.cli.memacc_xdm_2_xls_cli:main"
crypto-xdm-xlsx = "eb_model.cli.crypto_xdm_2_xls_cli:main"
cryif-xdm-xlsx = "eb_model.cli.cryif_xdm_2_xls_cli:main"
csm-xdm-xlsx = "eb_model.cli.csm_xdm_2_xls_cli:main"
secoc-xdm-xlsx = "eb_model.cli.secoc_xdm_2_xls_cli:main"
fim-xdm-xlsx = "eb_model.cli.fim_xdm_2_xls_cli:main"
dcm-xdm-xlsx = "eb_model.cli.dcm_xdm_2_xls_cli:main"
dem-xdm-xlsx = "eb_model.cli.dem_xdm_2_xls_cli:main"
dlt-xdm-xlsx = "eb_model.cli.dlt_xdm_2_xls_cli:main"
j1939dcm-xdm-xlsx = "eb_model.cli.j1939dcm_xdm_2_xls_cli:main"
j1939nm-xdm-xlsx = "eb_model.cli.j1939nm_xdm_2_xls_cli:main"
j1939rm-xdm-xlsx = "eb_model.cli.j1939rm_xdm_2_xls_cli:main"
j1939tp-xdm-xlsx = "eb_model.cli.j1939tp_xdm_2_xls_cli:main"
PrefSystemImporter = "eb_model.cli.pref_system_importer_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
ignore = ["F401", "F403", "W293"]
select = ["E", "F"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = false
ignore_missing_imports = true
check_untyped_defs = false
disable_error_code = [
    "assignment",
    "return-value",
    "no-any-return",
    "attr-defined",
    "override",
    "union-attr",
    "arg-type",
    "var-annotated",
    "misc",
]
exclude = [
    "src/eb_model/tests/.*",
]

[[tool.mypy.overrides]]
module = "eb_model.models.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "eb_model.parser.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "eb_model.reporter.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "eb_model.writer.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["src/eb_model/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test*"
addopts = "--cov=src/eb_model --cov-report=term-missing"